finished the input section forms

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,9 @@
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
     }
+    .boxShadow {
+      box-shadow: 3px 3px 5px 3px rgba(0,0,0,0.3);
+    }
   }
 
   @layer base {
